5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1756_1189.log
== TEST (2019-05-28 13:56:18) 
-- CODE:
a=array(eval(input("bote ai: ")))
a=a.replace()
b="" #inversao
i=-1
x=1
z=0
while(i>=-len(a)):
	b=b+a[i]
	if(a[z]!=(a[i])):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:56:45) 
-- CODE:
a=input("bote ai: ")
a=a.replace()
b="" #inversao
i=-1
x=1
z=0
while(i>=-len(a)):
	b=b+a[i]
	if(a[z]!=(a[i])):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=a.replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:57:05) 
-- CODE:
a=input("bote ai: ")
a=a.replace()
b="" #inversao
i=-1
x=1
z=0
while(i>=-len(a)):
	b=b+a[i]
	if(a[z]!=(a[i])):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=a.replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:57:26) 
-- CODE:
a=input("bote ai: ")
a=a.replace("","")
b="" #inversao
i=-1
x=1
z=0
while(i>=-len(a)):
	b=b+a[i]
	if(a[z]!=(a[i])):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(a[z]!=(a[i])):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:57:48) 
-- CODE:
a=input("bote ai: ")
a=a.replace("","")
b="" #inversao
i=-1
x=1
z=0
whilei>=-len(a):
	b=b+a[i]
	if a[z]!=(a[i]):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
File "XXXX", line 7
    whilei>=-len(a):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:57:54) 
-- CODE:
a=input("bote ai: ")
a=a.replace("","")
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if a[z]!=(a[i]):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if a[z]!=(a[i]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:58:15) 
-- CODE:
a=input("bote ai: ")
a=a.replace("","")
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if (a[z])!=(a[i]):
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (a[z])!=(a[i]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:58:43) 
-- CODE:
a=input("bote ai: ")
a=a.replace("","")
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(a[z]) != (a[i]) :
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:59:47) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i+1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(a[z]) != (a[i]) :
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:00:50) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i01
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    i=i01
NameError: name 'i01' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:00:54) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:01:00) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:01:13) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:09:28) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a) :
	b=b+a[i]
	if(a[z]) != (a[i]) :
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:10:15) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:10:42) 
-- CODE:
a=input("bote ai: ")
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:11:42) 
-- CODE:
a=input("bote ai: ").upper
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=a.replace('','')
AttributeError: 'builtin_function_or_method' object has no attribute 'replace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:11:47) 
-- CODE:
a=input("bote ai: ").upper
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=a.replace('','')
AttributeError: 'builtin_function_or_method' object has no attribute 'replace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:01) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:33) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
File "XXXX", line 10
    z=z+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:35) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
File "XXXX", line 10
    z=z+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:37) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
File "XXXX", line 10
    z=z+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:38) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
	z=z+1
	i=i-1
print(a)
print(x)
-- ERROR:
File "XXXX", line 10
    z=z+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:12:52) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z]) != (a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:15:02) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z])!=(a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:15:10) 
-- CODE:
a=input("bote ai: ").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z])!=(a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:15:29) 
-- CODE:
a=input("bote ai:").upper()
a=a.replace('','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z])!=(a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:17:01) 
-- CODE:
a=input("bote ai:").upper()
a=a.replace(' ','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z])!=(a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:17:08) 
-- CODE:
a=input("bote ai:").upper()
a=a.replace(' ','')
b="" #inversao
i=-1
x=1
z=0
while i>=-len(a):
	b=b+a[i]
	if(a[z])!=(a[i]):
		x=0	
	z=z+1
	i=i-1
print(a)
print(x)
-- EXECUTION TIME:
0.151317
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
